--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,6 +1,36 @@
+html {
+	font-family: Helvetica, sans-serif;
+	font-weight: normal;
+    font-size: 100%;
+    background-color: #FCFCFC;
+    overflow-y: scroll;
+}
+
 #header {
 	display: block;
+    clear: none;
 	padding-bottom: 0px;
+}
+
+.title {
+	float: left;
+	width: 100%;
+}
+
+.rounded-img {
+	margin-top: 1em;
+	margin-right: 1.2em;
+	margin-bottom: 0.2em;
+	margin-left: 0.2em;
+    float: left;
+    width: 80px;
+	border-radius: 50%;
+    border: 3px solid #BBBBBB;
+}
+
+.description {
+	color: #1A1A1A;
+	line-height: 20px;
 }
 
 #navigation-bar {
@@ -9,28 +39,8 @@
 	clear: both;
 }
 
-#content {
-	width: 100%;
-	clear: both;
-}
-
-.title {
-	font-family: Georgia, Palatino, 'Palatino Linotype', Times, 'Times New Roman', serif;
-	font-weight: normal;
-	float: left;
-	width: 100%;
-}
-
-.description {
-	color: #1A1A1A;
-	font-family: Helvetica, sans-serif;
-	line-height: 20px;
-}
-
-
 .links {
-	font-family: Helvetica, sans-serif;
-	font-weight: bolder;
+	font-weight: bold;
 }
 
 .links ul {
@@ -49,27 +59,21 @@
 	margin-left: 0px;
 }
 
-html {
-  font-size: 100%;
-  background-color: #FCFCFC;
-  overflow-y: scroll;
-/*  -- -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;*/
+#content {
+	width: 100%;
+	clear: both;
 }
 
 body {
-  font-family: Helvetica, sans-serif;
   line-height: 1.2em;
   padding: 1em;
   margin: auto;
   max-width: 45em;
-  background: #FCFCFC;
 }
 
 h1 {
-  font-size: 1.5em;
-  font-weight: bold;
-  line-height: 1.1em;
+  margin-top: 0.8em;
+  line-height: 1.2em;
 }
 
 h1,
@@ -106,28 +110,14 @@ a:active {
   outline: 0;
 }
 
-/*::-moz-selection {
-  background: rgba(255, 255, 0, 0.4);
-  color: #000;
-}*/
-
 ::selection {
   background: rgba(255, 255, 0, 0.4);
   color: #000;
 }
 
-/*a::-moz-selection {
-  background: rgba(255, 255, 0, 0.4);
-  color: #0645ad;
-}*/
-
 a::selection {
   background: rgba(255, 255, 0, 0.4);
-  color: #0645ad;
-}
-
-p {
-  margin: 1em 0;
+  color: #0645AD;
 }
 
 ul,
@@ -146,7 +136,6 @@ li p:last-child {
 
 img {
   border: 0;
-  /*-ms-interpolation-mode: bicubic;*/
   vertical-align: middle;
 }
 
@@ -167,12 +156,18 @@ th {
   text-align: left;
 }
 
+p {
+  line-height: 1.2em;
+  margin: 1em 0em;
+}
+
 .entry {
 	font-family: Helvetica, sans-serif;
 	font-weight: normal;
+    line-height: 1.2em;
 	color: #1A1A1A;
 	border-left: 10px solid #002147;
-	border-radius: 0px 3px 3px 0px;
+	border-radius: 2px 2px 2px 2px;
 	padding: 4px 10px 10px 10px;
 	margin-bottom: 1em;
 	background-color: #F0F0F0;
@@ -184,17 +179,7 @@ th {
 	margin: 10px auto 5px auto;
 }
 
-.rounded-img {
-	margin-top: 1em;
-	margin-right: 1em;
-	margin-bottom: 0.2em;
-	margin-left: 5px;
-    float: left;
-    width: 80px;
-	border-radius: 50%;
-    border: 3px solid #ddd;
-}
-
 .footer {
+    line-height: 1.2em;
     font-size: small;
 }
